force-app/main/default/objects/Previous_Employment__c/Previous_Employment__c.object-meta.xml
<CustomObject>
    <label>Previous Employment</label>
    <nameField>
        <label>Employment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>