force-app/main/default/objects/Previous_Employment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Previous Employments</relationshipLabel>
    <relationshipName>Previous_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>