force-app/main/default/objects/Previous_Employment__c/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Previous Employments (New Contact)</relationshipLabel>
    <relationshipName>Previous_Employments1</relationshipName>
    <type>Lookup</type>
</CustomField>