force-app/main/default/objects/Previous_Employment__c/fields/Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Employments</relationshipLabel>
    <relationshipName>Previous_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>